--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
 :root {
   font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+body {
+  font-size: 
+  line-height:
+}
