--- a/main.css
+++ b/main.css
@@ -2,6 +2,6 @@
   font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 body {
-  font-size: 1.5em
-  line-height: 2
+  font-size: 1.5em;
+  line-height: 2;
 }
