--- a/main.css
+++ b/main.css
@@ -1,6 +1,11 @@
 :root {
   font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+@media only screen
+
+and (min-device-width: 600px)
+
+and (max-device-width: 900px)
 body {
   font-size: 1.3em;
   line-height: 1.5;
