--- a/main.css
+++ b/main.css
@@ -17,4 +17,11 @@ h1, h2{
 h1{
   font-size: 2em
 }
-.maintext
+.maintext{
+  @media only screen
+
+  and (min-device-width: 600px, 75vw)
+
+  and (max-device-width: 900px, 50vw)
+
+}
