--- a/main.css
+++ b/main.css
@@ -3,15 +3,16 @@
 }
 @media only screen
 
-and (min-device-width: 600px)
+and (device-width < 600px)
 
-and (max-device-width: 900px)
+and (device-width < 900px)
 
 body {
   font-size: 1.3em;
   line-height: 1.5;
 }
-h1, h2{
+h1,
+h2{
   font-family: 'Arvo', serif;
   line-height: 1.5;
 }
@@ -21,9 +22,9 @@ h1{
 .maintext{
   @media only screen
 
-  and (min-device-width: 600px, 75vw);
+  and (device-width < 600px, 75vw);
 
-  and (min-device-width: 900px, 50vw);
+  and (device-width < 900px, 50vw);
 
 }
 .maintext,
