--- a/main.css
+++ b/main.css
@@ -1,11 +1,17 @@
 :root {
   font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
-@media only screen
+@media only screen and (min-width: 600px) {
+  .maintext{
+  max-width: 75vw
+  }
+}
 
-and (width < 600px)
-
-and (width < 900px)
+@media only scrren and (min-width: 900px) {
+  .maintext{
+    max-width: 50vw
+  }
+}
 
 body {
   font-size: 1.3em;
@@ -18,14 +24,6 @@ h2{
 }
 h1{
   font-size: 2em;
-}
-.maintext{
-  @media only screen
-
-  and (width < 600px, 75vw);
-
-  and (width < 900px, 50vw);
-
 }
 .maintext,
 .indexbody{
