--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ h1{
 .indexbody{
   height: 75vh;
   background-image: url("whale.jpg.jpg");
+  background-color: #AECFF2;
 }
 #booktitle,
 #bookauthor {
