--- a/main.css
+++ b/main.css
@@ -26,7 +26,8 @@ h1{
 
 .indexbody{
   height: 75vh;
-  background: #AECFF2, url("whale.jpg.jpg") no repeat;
+  background-color: #AECFF2;
+  background-image: url("whale.jpg.jpg");
 
 }
 #booktitle,
