--- a/main.css
+++ b/main.css
@@ -26,9 +26,10 @@ h1{
 
 .indexbody{
   height: 75vh;
-  background-color: #AECFF2;
   background-image: url("whale.jpg.jpg");
-
+}
+wholething{
+  background-color: #AECFF2;
 }
 #booktitle,
 #bookauthor {
