--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ h1{
   height: 75vh;
   background-image: url("whale.jpg.jpg");
 }
-wholething{
+#wholething{
   background-color: #AECFF2;
 }
 #booktitle,
