--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ h1{
   background-image: url("whale.jpg.jpg");
 }
 #wholething{
-  background-color: #5DBCD2;
+  background-color: #AECFF2;
 }
 #booktitle,
 #bookauthor {
