--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ h1{
 
 .indexbody{
   height: 75vh;
-  background-image: url("whale.jpg.jpg");
+  background-image: url("whale.jpg.jpg"), no-repeat;
 }
 #wholething{
   background-color: #AECFF2;
