--- a/main.css
+++ b/main.css
@@ -19,7 +19,6 @@ h1,
 h2{
   font-family: 'Arvo', serif;
   line-height: 1.3;
-  padding: 1em;
 }
 h1{
   font-size: 2em;
@@ -34,7 +33,7 @@ h1{
 }
 #booktitle,
 #bookauthor {
-  margin: 0px;
+  margin: 0;
 }
 ul {
   list-style-type: none;
