--- a/main.css
+++ b/main.css
@@ -5,13 +5,19 @@
 }
 @media only screen and (min-width: 600px) {
   .maintext{
-  max-width: 75vw
+  max-width: 75vw;
+  }
+  .whalepics{
+    max-width: 75%;
   }
 }
 
 @media only screen and (min-width: 900px) {
   .maintext{
-    max-width: 50vw
+    max-width: 50vw;
+  }
+  .whalepics{
+    max-width: 50%;
   }
 }
 
