--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 @media only screen and (min-width: 600px) {
   .maintext{
   max-width: 75vw;
+  text-align: center;
   }
   .whalepics{
     max-width: 75%;
